adguard-home/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  selector:
    app: adguard-home
  ports:
    - name: dns
      port: 53
      protocol: TCP
      targetPort: 53
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: dnstls
      port: 853
      protocol: TCP
      targetPort: 853
    - name: https
      port: 443
      protocol: TCP
      targetPort: 443
    - name: setup-http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
  type: ClusterIP
