adguard-home/ingress.yaml
apiVersion: v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: adguard-home
  namespace: adguard-home
spec:
  rules:
  - host: dns.hostname.com
    http:
      paths:
      - backend:
          serviceName: adguardhome
          servicePort: 443
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - dns.hostname.com
    secretName: dns.hostname.com-cert
